tests/typechecking/invalid/letrec2.ml
let rec f x = 
	print_int(x+1)
in f(3.9)
